--- a/CurrencyManager/View/CostsTableViewCell.xib
+++ b/CurrencyManager/View/CostsTableViewCell.xib
@@ -9,54 +9,58 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="costsCell" rowHeight="120" id="KGk-i7-Jjw" customClass="CostsTableViewCell" customModule="CurrencyManager" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="costsCell" rowHeight="76" id="KGk-i7-Jjw" customClass="CostsTableViewCell" customModule="CurrencyManager" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="m3v-hU-bV7">
-                        <rect key="frame" x="20" y="15" width="280" height="90"/>
+                        <rect key="frame" x="12" y="8" width="296" height="60"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-$49" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BTE-vg-DcA">
-                                <rect key="frame" x="185.5" y="37.5" width="80.5" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="32"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breakfest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ogR-gH-ahp">
-                                <rect key="frame" x="14" y="37.5" width="126" height="38.5"/>
-                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="32"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Breakfest" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="ogR-gH-ahp">
+                                <rect key="frame" x="12" y="24" width="125" height="26"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="125" id="uNA-3o-W8L"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today, 11:44 AM" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLu-mz-UtY">
-                                <rect key="frame" x="14" y="14" width="92.5" height="15"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <rect key="frame" x="12" y="10" width="81" height="12"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="10"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="-$49" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="22" translatesAutoresizingMaskIntoConstraints="NO" id="BTE-vg-DcA">
+                                <rect key="frame" x="159" y="18.5" width="125" height="31.5"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="125" id="WUi-LS-1xh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="26"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="secondarySystemGroupedBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="HLu-mz-UtY" secondAttribute="trailing" constant="20" symbolic="YES" id="0j2-cf-QSN"/>
-                            <constraint firstItem="ogR-gH-ahp" firstAttribute="leading" secondItem="m3v-hU-bV7" secondAttribute="leading" constant="14" id="453-9U-VRS"/>
-                            <constraint firstItem="HLu-mz-UtY" firstAttribute="top" secondItem="m3v-hU-bV7" secondAttribute="top" constant="14" id="4h6-6u-hTt"/>
-                            <constraint firstItem="HLu-mz-UtY" firstAttribute="leading" secondItem="m3v-hU-bV7" secondAttribute="leading" constant="14" id="FQq-iI-ZwK"/>
-                            <constraint firstAttribute="trailing" secondItem="BTE-vg-DcA" secondAttribute="trailing" constant="14" id="IzX-Ar-DRR"/>
-                            <constraint firstItem="BTE-vg-DcA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="ogR-gH-ahp" secondAttribute="trailing" constant="8" symbolic="YES" id="cjt-mD-BLz"/>
-                            <constraint firstAttribute="bottom" secondItem="BTE-vg-DcA" secondAttribute="bottom" constant="14" id="dcg-BD-X7V"/>
-                            <constraint firstAttribute="bottom" secondItem="ogR-gH-ahp" secondAttribute="bottom" constant="14" id="tgm-2Q-6aH"/>
+                            <constraint firstAttribute="bottom" secondItem="BTE-vg-DcA" secondAttribute="bottom" constant="10" id="DcP-Oq-yWZ"/>
+                            <constraint firstItem="HLu-mz-UtY" firstAttribute="top" secondItem="m3v-hU-bV7" secondAttribute="top" constant="10" id="Q5h-1V-5Zl"/>
+                            <constraint firstItem="HLu-mz-UtY" firstAttribute="leading" secondItem="m3v-hU-bV7" secondAttribute="leading" constant="12" id="RXa-dd-rnq"/>
+                            <constraint firstAttribute="trailing" secondItem="BTE-vg-DcA" secondAttribute="trailing" constant="12" id="jTP-QD-HGY"/>
+                            <constraint firstItem="ogR-gH-ahp" firstAttribute="leading" secondItem="m3v-hU-bV7" secondAttribute="leading" constant="12" id="lLn-lI-0qe"/>
+                            <constraint firstAttribute="bottom" secondItem="ogR-gH-ahp" secondAttribute="bottom" constant="10" id="nnh-DH-aFt"/>
                         </constraints>
                     </view>
                 </subviews>
                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="m3v-hU-bV7" secondAttribute="bottom" constant="15" id="G64-BP-P3R"/>
-                    <constraint firstItem="m3v-hU-bV7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="JCw-S3-kla"/>
-                    <constraint firstItem="m3v-hU-bV7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="pkr-id-VZD"/>
-                    <constraint firstAttribute="trailing" secondItem="m3v-hU-bV7" secondAttribute="trailing" constant="20" id="vep-rR-z9O"/>
+                    <constraint firstItem="m3v-hU-bV7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="W4j-Bg-Ffd"/>
+                    <constraint firstAttribute="trailing" secondItem="m3v-hU-bV7" secondAttribute="trailing" constant="12" id="tDY-ZJ-hEA"/>
+                    <constraint firstItem="m3v-hU-bV7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="12" id="xUj-BT-wPM"/>
+                    <constraint firstAttribute="bottom" secondItem="m3v-hU-bV7" secondAttribute="bottom" constant="8" id="xv1-x2-8x8"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -66,7 +70,7 @@
                 <outlet property="costsTypeLabel" destination="BTE-vg-DcA" id="ayb-eF-01Q"/>
                 <outlet property="dateLabel" destination="HLu-mz-UtY" id="r7z-Rf-hzN"/>
             </connections>
-            <point key="canvasLocation" x="134.78260869565219" y="155.35714285714286"/>
+            <point key="canvasLocation" x="134.78260869565219" y="141.29464285714286"/>
         </tableViewCell>
     </objects>
 </document>
